unpackaged/objects/Track__c.object
<CustomObject>
    <fields>
        <fullName>Mix__c</fullName>
        <label>Mix</label>
        <referenceTo>Mix__c</referenceTo>
        <relationshipLabel>Tracks</relationshipLabel>
        <relationshipName>Tracks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Track Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Song__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Song</label>
        <referenceTo>Song__c</referenceTo>
        <relationshipLabel>Tracks</relationshipLabel>
        <relationshipName>Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Track</label>
    <nameField>
        <displayFormat>TRACK-{0000}</displayFormat>
        <label>Track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>